src/public/styles/inputs.css
textarea {
    display: block;
    width: 40%;
    height: 120px;
    min-height: 80px;
    max-height: 240px;
    margin: 0.5rem 0;
    padding: 3px;
    color: var(--neutral-color-200);
    font-family: var(--font-family-monospace);
    background-color: var(--input-background);
    border: 1px solid #444;
    border-radius: 4px;
    transition: box-shadow 0.1s ease;
    resize: vertical;

    @media (width <= 700px) {
        width: 85%;
    }
}

.fake-input {
    text-align: left;
    user-select: text;
    overflow: scroll;
}

input:not(input[type="file"], input[type="checkbox"], input[type="color"]),
.fake-input {
    width: 200px;
    padding: 3px 5px;
    color: var(--neutral-color-200);
    font-size: 12px;
    font-family: var(--font-family-monospace);
    background-color: var(--input-background);
    border: 1px solid #444;
    border-radius: 4px;
    transition: all 0.2s ease;
    cursor: pointer;
    scrollbar-width: none;
}

input::-webkit-scrollbar,
.fake-input::-webkit-scrollbar {
    display: none;
}

input:focus:not(input[type="file"], input[type="checkbox"], input[type="color"]),
textarea:focus:not(input[type="file"]),
.fake-input:focus {
    outline: none;
    box-shadow: 0 0 3px 2px lightslategray;
}

input[type="file"] {
    display: none;
}

input[type="color"] {
    background-color: var(--input-background);
    border: 1px solid #444;
    border-radius: 4px;
    cursor: pointer;

    &:hover {
        background-color: var(--input-background-hover);
    }
}

select {
    width: min-content;
    padding: 3px 5px;
    color: var(--neutral-color-100);
    font-size: 12px;
    font-family: var(--font-family-monospace);
    background-color: var(--input-background);
    border: 1px solid #444;
    border-radius: 4px;
    outline: none;
    box-shadow: none;
    transition: all 0.2s ease;
    cursor: pointer;
}

.file-upload {
    display: block;
    width: max-content;
    height: max-content;
    margin-block: 3px;
    padding: 6px;
    color: var(--neutral-color-100);
    font-weight: normal;
    font-size: 16px;
    background-color: var(--input-background);
    border: 1px solid #444;
    border-radius: 4px;
    transition: all 0.2s ease;
    cursor: pointer;

    &::before {
        padding-right: 3px;
        font-weight: bold;
        font-size: calc(1em - 2px);
        /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
        font-family: "Font Awesome 7 Pro";
        content: "\f574";
    }

    &:hover {
        background-color: var(--input-background-hover);
        transition: all 0.2s ease;
    }

    & ~ #file-message {
        margin-block: 5px;
        font-size: 15px;
    }
}

button:not(.fake-input) {
    width: max-content;
    height: max-content;
    margin: 3px 0;
    padding: 3px 5px;
    color: var(--neutral-color-100);
    font-family: var(--font-family);
    background-color: var(--input-background);
    border: 1px solid #444;
    border-radius: 4px;
    transition: all 0.2s ease;
    cursor: pointer;

    &:disabled {
        opacity: 0.5;
        cursor: not-allowed;
    }

    &:hover {
        background-color: var(--input-background-hover);
    }

    &.button-danger {
        color: var(--error-color-200);
    }

    &.button-result-success::after {
        padding-left: 3px;
        color: var(--success-color-300);
        font-weight: bold;
        font-size: calc(1em - 2px);
        /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
        font-family: "Font Awesome 7 Pro";
        content: "\f00c";
    }

    &.button-result-error::after {
        padding-left: 3px;
        color: var(--error-color-300);
        font-weight: bold;
        font-size: calc(1em - 2px);
        /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
        font-family: "Font Awesome 7 Pro";
        content: "\f00d";
    }

    &.button-result-warning::after {
        padding-left: 3px;
        color: var(--warning-color-300);
        font-weight: bold;
        font-size: calc(1em - 2px);
        /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
        font-family: "Font Awesome 7 Pro";
        content: "\f071";
    }

    &.button-copy::after {
        padding-left: 3px;
        font-weight: bold;
        font-size: calc(1em - 2px);
        /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
        font-family: "Font Awesome 7 Pro";
        content: "\f0c5";
    }
}

.invisible-input[type="text"]:not(input[type="file"], input[type="checkbox"]),
.invisible-input[type="number"]:not(input[type="file"], input[type="checkbox"]) {
    width: 1.35em;
    padding-bottom: 0;
    color: var(--neutral-color-100);
    font-weight: 500;
    font-size: 50px;
    font-family: var(--font-family);
    text-align: right;
    background-color: transparent;
    border: none;
    border-bottom: 1px solid var(--neutral-color-100);
    border-radius: 0;
    overflow: hidden;
}

.invisible-input[type="text"]:focus:not(input[type="file"], input[type="checkbox"]),
.invisible-input[type="number"]:focus:not(input[type="file"], input[type="checkbox"]) {
    outline: none;
    box-shadow: none;
}

.invisible-input[type="number"]::-webkit-inner-spin-button,
.invisible-input[type="number"]::-webkit-outer-spin-button,
.no-arrow[type="number"]::-webkit-inner-spin-button,
.no-arrow[type="number"]::-webkit-outer-spin-button {
    margin: 0;
    appearance: none;
}

